--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<header></header>
-<header></header>
- <h1>colegio doutor claudino dos santos </h1>
+<header>
+    <img class="cabecalho-imagem" src="./img/logo.png" alt="logo colegio doutor claudino dos santos">
+ <h1> colegio doutor claudino dos santos </h1>
  <u1></u1>
  <li> horario do transporte escolar</l1>
     <li>Biblioteca</li>
     <li>Cantina</li>
-<header></header>
-<header></header>
-</html>
+</header>
+</html> 
