--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<header>
+<header class="cabecalho">
     <img class="cabecalho-imagem" src="./img/logo.png" alt="logo colegio doutor claudino dos santos">
  <h1> colegio doutor claudino dos santos </h1>
- <u1></u1>
- <li> horario do transporte escolar</l1>
-    <li>Biblioteca</li>
-    <li>Cantina</li>
+ <u1>
+ <li class="cabecalho lista de itens"> horario do transporte escolar</l1>
+    <li class=" cabecalho lista de itens"> Biblioteca</li>
+    <li class=" cabecalho lista de itens">Cantina</li>
+
+ </u1>
 </header>
 </html> 
