--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 </section>
 <section>
     <h2 class="alunos titulos"> conhecendo os alunos</h2>
+
+<div class="estudante-todos">
     <div class="estudante-div">
-    <a href="https://www.educacao.pr.gov.br/iniciar/" <" img class="aluno-um" src="./img/imagem.png"> </a>
+    <a href="https://www.educacao.pr.gov.br/iniciar/" > <img class="aluno-um" src="./img/imagem.png"> </a>
     <h3>aluno um</h3>
     <img class="estudante-icone"src="./img/wpp.png">
     <img class="estudante-icone"src="./img/netflix.png">
@@ -63,6 +65,9 @@
                 <img class="estudante-icone"src="./img/netflix.png">
                 <img class="estudante-icone"src="./img/insta.png">
             </div>
+        </section>
+        </footer>
+        <h2 class="rodape"> Colegio claudino </h2>
 
 
     
